opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy" 
  "Thomas Leonard" 
  "Thomas Gazagnaire" 
  "Rudi Grinberg"
]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/ocaml-conduit"
bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
synopsis: "A network connection establishment library for Async"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-j1"] {with-test}
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "core"
  "conduit"
  "async" {>= "v0.12.0"}
  "async_ssl"
  "conduit-tls"
  "stdlib-shims" {with-test}
]
