opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy" 
  "Thomas Leonard" 
  "Thomas Gazagnaire" 
  "Rudi Grinberg"
  "Romain Calascibetta"
]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/ocaml-conduit"
bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
synopsis: "A portable network connection establishment library using Async"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j1"] {with-test}
]

depends: [
  "ocaml"             {>= "4.07.0"}
  "dune"              {>= "2.0.0"}
  "core"
  "conduit"           {= version}
  "async"             {>= "v0.12.0"}
  "cstruct"
  "base-bigarray"     {with-test}
  "bigstringaf"       {with-test}
  "ke"                {with-test}
  "fmt"               {with-test}
  "rresult"           {with-test}
  "conduit-async-tls" {with-test & post}
  "conduit-async-ssl" {with-test & post}
]
