opam-version: "2.0"
maintainer: "anil@recoil.org"
authors:[
  "Anil Madhavapeddy"
  "Thomas Leonard"
  "Thomas Gazagnaire"
  "Rudi Grinberg"
  "Romain Calascibetta"
]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/ocaml-conduit"
bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
synopsis: "A portable network connection establishment library using Lwt"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-j1"] {with-test}
]

depends: [
  "ocaml" {>= "4.07.0"}
  "dune"
  "conduit-lwt"
  "conduit-tls"
]
