opam-version: "2.0"
maintainer: "anil@recoil.org"
authors:[
  "Anil Madhavapeddy"
  "Thomas Leonard"
  "Thomas Gazagnaire"
  "Rudi Grinberg"
  "Romain Calascibetta"
]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/ocaml-conduit"
bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
synopsis: "A portable network connection establishment library using Lwt and ocaml-tls"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j1"] {with-test}
]

depends: [
  "ocaml"             {>= "4.07.0"}
  "dune"              {>= "2.0.0"}
  "conduit-lwt"       {= version}
  "conduit-tls"       {= version}
  "mirage-crypto-rng" {>= "0.8.0"}
]
