opam-version: "1.2"
maintainer:   "anil@recoil.org"
authors:      ["Anil Madhavapeddy" "Thomas Leonard" "Thomas Gazagnaire" "Rudi Grinberg"]
homepage:     "https://github.com/mirage/ocaml-conduit"
dev-repo:     "https://github.com/mirage/ocaml-conduit.git"
bug-reports:  "https://github.com/mirage/ocaml-conduit/issues"
tags:         "org:mirage"
license:      "ISC"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build}
  "base-unix"
  "ppx_sexp_conv"
  "sexplib"
  "conduit"
  "lwt" {>="3.0.0"}
]
available: [ocaml-version >= "4.03.0"]
