opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy" "Thomas Leonard" "Thomas Gazagnaire" "Rudi Grinberg"
]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/ocaml-conduit"
bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "2.0"}
  "base-unix"
  "ppx_sexp_conv" {>="v0.13.0"}
  "sexplib0"
  "conduit" {=version}
  "lwt" {>= "5.7.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
synopsis: "A portable network connection establishment library using Lwt"
x-maintenance-intent: [ "(latest)" ]
