opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy"
  "Thomas Leonard"
  "Thomas Gazagnaire"
]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/ocaml-conduit"
bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
synopsis: "A network connection establishment library for MirageOS"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml" {>= "4.07.0"}
  "dune"
  "conduit"
  "tcpip"
  "mirage-flow"
  "mirage-time"
  "dns-client"
  "ke"
  "bigstringaf"
]
