opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy"
  "Thomas Leonard"
  "Thomas Gazagnaire"
]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/ocaml-conduit"
bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
synopsis: "A network connection establishment library for MirageOS"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.0.0"}
  "conduit"     {= version}
  "tcpip"
  "mirage-flow"
  "mirage-time"
  "mirage-stack" {>= "2.2.0"}
  "dns-client"  {>= "4.6.0"}
  "ke"
  "bigstringaf"
]

pin-depends: [
 [ "dns-client.4.6.2" "git+https://github.com/hannesm/ocaml-dns.git#0258dfabbdf0ae1d997f15627693edccab432f6f" ]
]