opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: ["Anil Madhavapeddy" "Thomas Leonard" "Thomas Gazagnaire"]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/ocaml-conduit"
bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune"
  "ppx_sexp_conv" {>="v0.13.0"}
  "sexplib"
  "uri" {>= "4.0.0"}
  "cstruct" {>= "3.0.0"}
  "mirage-stack" {>= "2.2.0"}
  "mirage-clock" {>= "3.0.0"}
  "mirage-flow" {>= "2.0.0"}
  "mirage-flow-combinators" {>= "2.0.0"}
  "mirage-random" {>= "2.0.0"}
  "mirage-time" {>= "2.0.0"}
  "dns-client" {>= "5.0.0"}
  "conduit-lwt" {=version}
  "vchan" {>= "5.0.0"}
  "xenstore"
  "tls" {>= "0.11.0"}
  "tls-mirage" {>= "0.11.0"}
  "ca-certs-nss"
  "ipaddr" {>= "3.0.0"}
  "ipaddr-sexp"
  "tcpip" {with-test}
]
conflicts: [
  "mirage-conduit"
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
pin-depends: [
  "dns-client.5.0.0" "git+https://github.com/mirage/ocaml-dns.git#29168a8c464796fda77b50d721176f122ee724ae"
  "dns.5.0.0" "git+https://github.com/mirage/ocaml-dns.git#29168a8c464796fda77b50d721176f122ee724ae"
  "x509.0.12.0" "git+https://github.com/mirleft/ocaml-x509.git#02f662eaf7a549ff071a939b86a2e0bfaabc5890"
]
dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
synopsis: "A network connection establishment library for MirageOS"
pin-depends: [
  [ "tls.0.13.0" "git+https://github.com/mirleft/ocaml-tls.git#f9dd61f556d3f2790aa9eedcf2b6b3c8c99cb338" ]
  [ "tls-mirage.0.13.0" "git+https://github.com/mirleft/ocaml-tls.git#f9dd61f556d3f2790aa9eedcf2b6b3c8c99cb338" ]
]
