opam-version: "1.2"
maintainer:   "anil@recoil.org"
authors:      ["Anil Madhavapeddy" "Thomas Leonard" "Thomas Gazagnaire"]
homepage:     "https://github.com/mirage/ocaml-conduit"
dev-repo:     "https://github.com/mirage/ocaml-conduit.git"
bug-reports:  "https://github.com/mirage/ocaml-conduit/issues"
tags:         "org:mirage"
license:      "ISC"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: ["dune" "runtest" "-p" name]

depends: [
  "dune" {build}
  "ppx_sexp_conv"
  "sexplib"
  "cstruct"          {>= "3.0.0"}
  "mirage-stack-lwt" {>= "1.3.0"}
  "mirage-time-lwt"  {>= "1.1.0"}
  "mirage-flow-lwt"  {>= "1.2.0"}
  "mirage-dns"       {>= "3.0.0"}
  "conduit-lwt"
  "vchan"            {>= "3.0.0"}
  "xenstore"
  "tls"              {>="0.8.0"}
]
available: [ocaml-version >="4.03.0"]
