(library
 (name conduit_async)
 (public_name conduit-async)
 (modules conduit_async internal tCP)
 (libraries cstruct async conduit))

(library
 (name conduit_async_tls)
 (public_name conduit-async-tls)
 (modules conduit_async_tls)
 (libraries conduit-tls conduit-async))

(library
 (name conduit_async_ssl)
 (public_name conduit-async-ssl)
 (modules conduit_async_ssl)
 (libraries core async_ssl conduit-async))
