(library
 (name conduit_lwt_unix)
 (public_name conduit-lwt-unix)
 (modules conduit_lwt_unix)
 (libraries conduit-lwt lwt.unix))

(library
 (name conduit_lwt_unix_tcp)
 (public_name conduit-lwt-unix.tcp)
 (modules conduit_lwt_unix_tcp)
 (libraries conduit-lwt-unix))

(library
 (name conduit_lwt_unix_tls)
 (public_name conduit-lwt-unix.tls)
 (modules conduit_lwt_unix_tls)
 (libraries conduit-lwt-unix conduit-lwt-unix.tcp conduit-tls))

(library
 (name conduit_lwt_unix_ssl)
 (public_name conduit-lwt-unix.ssl)
 (modules conduit_lwt_unix_ssl)
 (libraries conduit-lwt-unix conduit-lwt-unix.tcp lwt_ssl))
