(library
 (name conduit_mirage)
 (public_name conduit-mirage)
 (modules conduit_mirage)
 (libraries conduit conduit-lwt))

(library
 (name conduit_mirage_tls)
 (public_name conduit-mirage.tls)
 (modules conduit_mirage_tls)
 (libraries conduit-mirage conduit-tls))

(library
 (name conduit_mirage_flow)
 (public_name conduit-mirage.flow)
 (modules conduit_mirage_flow)
 (libraries conduit-mirage conduit-lwt.flow))

(library
 (name conduit_mirage_tcp)
 (public_name conduit-mirage.tcp)
 (modules conduit_mirage_tcp)
 (libraries logs mirage-stack bigstringaf ke tcpip.tcp conduit-mirage))

(library
 (name conduit_mirage_dns)
 (public_name conduit-mirage.dns)
 (modules conduit_mirage_dns)
 (libraries conduit-mirage dns-client.mirage))
