(library
 (name conduit_mirage)
 (public_name conduit-mirage)
 (modules conduit_mirage)
 (libraries cstruct conduit lwt))

(library
 (name conduit_mirage_tcp)
 (public_name conduit-mirage.tcp)
 (modules conduit_mirage_tcp)
 (libraries logs mirage-stack bigstringaf ke tcpip.tcp conduit-mirage))

(library
 (name conduit_mirage_dns)
 (public_name conduit-mirage.dns)
 (modules conduit_mirage_dns)
 (libraries mirage-time conduit-mirage conduit-mirage.tcp dns-client.mirage))

(library
 (name conduit_mirage_flow)
 (public_name conduit-mirage.flow)
 (modules conduit_mirage_flow)
 (libraries conduit-mirage mirage-flow))
